--- a/index.html
+++ b/index.html
@@ -7,22 +7,54 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <ul class="menu">
-      <li>Home</li>
-      <li>About</li>
-      <li>Contacts</li>
-    </ul>
-    <div class="content">
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis
-        debitis magni voluptate rem veniam quibusdam obcaecati placeat ullam.
-        Fuga, neque.
-      </p>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. A mollitia
-        expedita libero at voluptas ducimus dolorum hic magni? Incidunt,
-        accusantium?
-      </p>
+    <div class="container">
+      <ul class="menu">
+        <li>Home</li>
+        <li>About</li>
+        <li>Contacts</li>
+      </ul>
+      <div class="content">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+          totam cumque natus nesciunt, eaque dolores delectus placeat quibusdam
+          necessitatibus voluptate praesentium accusantium est et velit dolorem
+          ipsa. Iusto veniam fuga ullam dolores inventore incidunt labore? Animi
+          cupiditate earum qui culpa ipsa. Accusamus cupiditate perferendis
+          dolor repudiandae iure facilis quae quaerat?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+          totam cumque natus nesciunt, eaque dolores delectus placeat quibusdam
+          necessitatibus voluptate praesentium accusantium est et velit dolorem
+          ipsa. Iusto veniam fuga ullam dolores inventore incidunt labore? Animi
+          cupiditate earum qui culpa ipsa. Accusamus cupiditate perferendis
+          dolor repudiandae iure facilis quae quaerat?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+          totam cumque natus nesciunt, eaque dolores delectus placeat quibusdam
+          necessitatibus voluptate praesentium accusantium est et velit dolorem
+          ipsa. Iusto veniam fuga ullam dolores inventore incidunt labore? Animi
+          cupiditate earum qui culpa ipsa. Accusamus cupiditate perferendis
+          dolor repudiandae iure facilis quae quaerat?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+          totam cumque natus nesciunt, eaque dolores delectus placeat quibusdam
+          necessitatibus voluptate praesentium accusantium est et velit dolorem
+          ipsa. Iusto veniam fuga ullam dolores inventore incidunt labore? Animi
+          cupiditate earum qui culpa ipsa. Accusamus cupiditate perferendis
+          dolor repudiandae iure facilis quae quaerat?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+          totam cumque natus nesciunt, eaque dolores delectus placeat quibusdam
+          necessitatibus voluptate praesentium accusantium est et velit dolorem
+          ipsa. Iusto veniam fuga ullam dolores inventore incidunt labore? Animi
+          cupiditate earum qui culpa ipsa. Accusamus cupiditate perferendis
+          dolor repudiandae iure facilis quae quaerat?
+        </p>
+      </div>
     </div>
   </body>
 </html>
